--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aioflask==0.4.0
 aiohttp==3.8.4
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
@@ -15,11 +16,15 @@ clickhouse-connect==0.5.25
 coloredlogs==15.0.1
 dataclasses-json==0.5.7
 duckdb==0.8.0
+exceptiongroup==1.1.1
 fastapi==0.95.2
 Flask==2.3.2
+Flask-Cors==3.0.10
 flatbuffers==23.5.26
 frozenlist==1.3.3
 greenlet==2.0.2
+greenletio==0.10.1
+gunicorn==20.1.0
 h11==0.14.0
 hnswlib==0.7.0
 httptools==0.5.0
@@ -29,6 +34,7 @@ importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 langchain==0.0.181
+langchainplus-sdk==0.0.4
 lz4==4.3.2
 MarkupSafe==2.1.2
 marshmallow==3.19.0
@@ -47,6 +53,7 @@ packaging==23.1
 pandas==2.0.1
 posthog==3.0.1
 protobuf==4.23.2
+pulsar-client==3.2.0
 pycodestyle==2.10.0
 pydantic==1.10.8
 PyJWT==2.7.0
