--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+aiofiles==23.1.0
 aioflask==0.4.0
 aiohttp==3.8.4
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
+altair==5.0.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==23.1.0
@@ -14,31 +16,53 @@ chromadb==0.3.25
 click==8.1.3
 clickhouse-connect==0.5.25
 coloredlogs==15.0.1
+contourpy==1.1.0
+cycler==0.11.0
 dataclasses-json==0.5.7
+dnspython==2.3.0
 duckdb==0.8.0
 exceptiongroup==1.1.1
 fastapi==0.95.2
+ffmpy==0.3.1
+filelock==3.12.2
 Flask==2.3.2
 Flask-Cors==3.0.10
 flatbuffers==23.5.26
+fonttools==4.41.1
 frozenlist==1.3.3
+fsspec==2023.6.0
+gradio==3.38.0
+gradio_client==0.2.10
 greenlet==2.0.2
 greenletio==0.10.1
 gunicorn==20.1.0
 h11==0.14.0
 hnswlib==0.7.0
+httpcore==0.17.3
 httptools==0.5.0
+httpx==0.24.1
+huggingface-hub==0.16.4
 humanfriendly==10.0
 idna==3.4
 importlib-metadata==6.6.0
+importlib-resources==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
+kiwisolver==1.4.4
 langchain==0.0.181
 langchainplus-sdk==0.0.4
+linkify-it-py==2.0.2
+loguru==0.7.0
 lz4==4.3.2
+markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
+matplotlib==3.7.2
+mdit-py-plugins==0.3.3
+mdurl==0.1.2
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.4
@@ -48,22 +72,33 @@ numpy==1.24.3
 onnxruntime==1.15.0
 openai==0.27.7
 openapi-schema-pydantic==1.2.4
+orjson==3.9.2
 overrides==7.3.1
 packaging==23.1
 pandas==2.0.1
+Pillow==10.0.0
+pinecone-client==2.2.2
 posthog==3.0.1
 protobuf==4.23.2
 pulsar-client==3.2.0
+pyairtable==1.5.0
 pycodestyle==2.10.0
 pydantic==1.10.8
+pydub==0.25.1
 PyJWT==2.7.0
+pymongo==4.4.0
+pyparsing==3.0.9
 PyPDF2==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-multipart==0.0.6
 pytz==2023.3
 PyYAML==6.0
+referencing==0.30.0
 regex==2023.5.5
 requests==2.31.0
+rpds-py==0.9.2
+semantic-version==2.10.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.15
@@ -73,12 +108,14 @@ tenacity==8.2.2
 tiktoken==0.4.0
 tokenizers==0.13.3
 tomli==2.0.1
+toolz==0.12.0
 tqdm==4.65.0
 twilio==8.2.1
 typing-inspect==0.9.0
 typing_extensions==4.6.2
 tzdata==2023.3
-urllib3==2.0.2
+uc-micro-py==1.0.2
+urllib3==1.26.16
 uvicorn==0.22.0
 uvloop==0.17.0
 watchfiles==0.19.0
